2003-04-18  Sam Steingold  <sds@gnu.org>

	* backquote.lisp (eval-self-p): T evaluates to itself too
	(maybe-unquote): new function - the dual for MAYBE-QUOTE
	(bq-optimize-append): avoid consing up BUTLAST twice;
	do not destructively modify input lists (suggested by Kaz)
	(bq-optimize-list*): call MAYBE-UNQUOTE instead of the
	obsolete BQ-DROP-SUPERFLUOUS-QUOTES
	(bq-drop-superfluous-quotes): removed

2003-04-10  Kaz Kylheku  <kaz@ashi.footprints.net>

	* backquote.lisp (bq-optimize-vec): New function.
	(bq-vec-expand): Use it if optimization is turned on.

2003-04-18  Sam Steingold  <sds@gnu.org>

	* encoding.d (init_encodings_2): unintern CHARSET:WINDOWS-1255 and
	CHARSET:WINDOWS-1258 when CHARSET:CP1255 and CHARSET:CP1258 are void
	Reported by Jörg Höhle <Joerg-Cyril.Hoehle@t-systems.com>

2003-04-18  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (make-xterm-io-stream) [UNIX]: new function
	* clos.lisp (need-gf-already-called-warning-p): new function
	(warn-if-gf-already-called): use it
	(std-remove-method): use it and not warn on removing methods when
	*WARN-IF-GF-ALREADY-CALLED* is NIL

2003-04-17  Sam Steingold  <sds@gnu.org>

	implemented feature request #[ 723360 ]: restart keyword
	commands in debugger
	* reploop.lisp (break-loop): use restart name as the command and
	:Rnum as the abbreviation; re-align help messages

2003-04-06  Sam Steingold  <sds@gnu.org>

	* constobj.d: added hs_simple_nilvector and hs_nilvector
	* predtype.d: added enum_hs_simple_nilvector and enum_hs_nilvector
	(heap_statistics_mapper): count (VECTOR NIL) objects separately

2003-04-06  Sam Steingold  <sds@gnu.org>

	implemented ANSI CLOS class forward definition
	* clos.lisp (defclass): do not require that the parents exist
	(*finalizing-now*): new variable
	(class-finalize): new function
	(ensure-class): consider the class to exist already only if it
	has been finalized
	(finalize-instance-standard-class): move all finalizations here
	(initialize-instance-standard-class): call it